--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
     </div>
 </div>
 
+<div>
+    <h3>Todos os direitos e proteçoes reservadas a LUIZ GUSTAVO DIAS DA SILVA.</h3>
+    <p>Este site tem como objetivo apenas a divulgação das regras de competiçoes de forma proficional e segura de haking</p>
+</div>
+
 <div class="sprite-layer">
     <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/25.gif" class="sprite pikachu">
     <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/4.gif" class="sprite charmander">
